# PearGradingSystem

./: .gitignore  README.md
.dvc/: config
grading_inference_server/: Dockerfile
grading_inference_server/add_sub/: config.pbtxt
grading_inference_server/add_sub/1/: model.py
grading_inference_server/models/pear_evaluator/: config.pbtxt  inference_all.py
grading_inference_server/models/pear_evaluator/1/: model.py
gui/: README.md  exec_script.bat  pear_imaging_opdata - コピー.mx2c  pear_imaging_opdata.mx2c  pyproject.toml
gui/ini/: device_config.ini
gui/pear_imaging/: __main__.py  app.ui  bfs_controller.py  sercom.py
gui/pear_imaging/enums/: __init__.py  camera.py  op_code.py  raspi.py
gui/pear_imaging/widgets/: image_widget.py
inference_server/: .gitignore  Dockerfile  Makefile  docker-compose.yaml
inference_server/models/pear_evaluator/: config.pbtxt
inference_server/models/pear_evaluator/1/: model.py
pear_grade_inference_client/: pyproject.toml
pear_grade_inference_client/pear_grade_inference_client/: deeplabv3plus.py
pedestal_controller/: gpio_test.py  led_ctrl.py  led_test.py  main.py  motor_ctrl.py  sercom.py  test.py
research/background_remove/: background_remove.ipynb  pyproject.toml
research/background_remove/.ipynb_checkpoints/: background_remove-checkpoint.ipynb
research/background_remove/OriginData/: Untitled.ipynb
research/background_remove/OriginData/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
research/background_remove/tests/: test_background_remove.py
research/grading/: pyproject.toml  result.csv  result__.csv
research/grading/datasets/annotations/: annotation_for_grading.json  annotation_ja.json  validation_annotations_multi.json
research/grading/grading/: __main__.py
research/grading/grading/datameker/: main.py
research/grading/grading/evaluate/: __init__.py  deteriorations.py  evaluate.py
research/grading/grading/inference/: train.py
research/grading/grading/objects/: deterioration.py  pear.py
research/grading/tests/: test_grading.py
research/grading/tests/evaluate/: test_evaluate.py
research/grading_inference_server_clinet/pear_grade_inference_client/: compare_encod.py  deeplabv3plus.py  fastapi.py  pear_evaluate_output.py
research/grading_inference_server_clinet/tests/: test_pear_grade_inference_client.py
research/pear_shape/: .coverage  pyproject.toml
research/pear_shape/pear_shape/: __main__.py  contour.py  feature.py
research/pear_shape/tests/: test_contour.py  test_feature.py
(+11 files in other folders)
