[tool.poetry]
name = "pear_grade_inference_client"
version = "0.1.0"
description = ""
authors = ["KensukeNakazawa <infokensuke.n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tritonclient = {extras = ["all"], version = "^2.26.0"}
opencv-python = "^4.6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
