[tool.poetry]
name = "background_remove"
version = "0.1.0"
description = ""
authors = ["KensukeNakazawa <infokensuke.n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
