[tool.poetry]
name = "grading"
version = "0.1.0"
description = ""
authors = ["KensukeNakazawa <infokensuke.n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
